Replace OnlyOffice branding with UnivaultOffice

--- a/apps/presentationeditor/main/locale/nl.json
+++ b/apps/presentationeditor/main/locale/nl.json
@@ -1425,7 +1425,7 @@
   "PE.Controllers.Main.textLearnMore": "Meer informatie",
   "PE.Controllers.Main.textLoadingDocument": "Presentatie wordt geladen",
   "PE.Controllers.Main.textLongName": "Voer een naam in die uit minder dan 128 tekens bestaat.",
-  "PE.Controllers.Main.textNoLicenseTitle": "Only Office verbindingslimiet",
+  "PE.Controllers.Main.textNoLicenseTitle": "Univault Office verbindingslimiet",
   "PE.Controllers.Main.textObject": "Object",
   "PE.Controllers.Main.textPaidFeature": "Betaalde optie",
   "PE.Controllers.Main.textReconnect": "Verbinding is hersteld",
