--- a/apps/documenteditor/main/locale/ru.json
+++ b/apps/documenteditor/main/locale/ru.json
@@ -4290,5 +4290,6 @@
   "DE.Views.WatermarkSettingsDialog.textTransparency": "Полупрозрачный",
   "DE.Views.WatermarkSettingsDialog.textUnderline": "Подчёркнутый",
   "DE.Views.WatermarkSettingsDialog.tipFontName": "Шрифт",
-  "DE.Views.WatermarkSettingsDialog.tipFontSize": "Размер шрифта"
+  "DE.Views.WatermarkSettingsDialog.tipFontSize": "Размер шрифта",
+  "Common.Views.ShortcutsEditDialog.txtCantBeEdited": "This shortcut can’t be edited"
 }
