--- a/apps/documenteditor/main/locale/sr-cyrl.json
+++ b/apps/documenteditor/main/locale/sr-cyrl.json
@@ -4290,5 +4290,6 @@
   "DE.Views.WatermarkSettingsDialog.textTransparency": "Полупровидно",
   "DE.Views.WatermarkSettingsDialog.textUnderline": "Подвуци",
   "DE.Views.WatermarkSettingsDialog.tipFontName": "Назив фонта",
-  "DE.Views.WatermarkSettingsDialog.tipFontSize": "Величина фонта"
+  "DE.Views.WatermarkSettingsDialog.tipFontSize": "Величина фонта",
+  "Common.Views.ShortcutsEditDialog.txtCantBeEdited": "This shortcut can’t be edited"
 }
