--- a/apps/documenteditor/main/locale/ro.json
+++ b/apps/documenteditor/main/locale/ro.json
@@ -4290,5 +4290,6 @@
   "DE.Views.WatermarkSettingsDialog.textTransparency": "Semitransparent",
   "DE.Views.WatermarkSettingsDialog.textUnderline": "Subliniat",
   "DE.Views.WatermarkSettingsDialog.tipFontName": "Denumire font",
-  "DE.Views.WatermarkSettingsDialog.tipFontSize": "Dimensiune font"
+  "DE.Views.WatermarkSettingsDialog.tipFontSize": "Dimensiune font",
+  "Common.Views.ShortcutsEditDialog.txtCantBeEdited": "This shortcut can’t be edited"
 }
